<resources>
    <string name="app_name">TravelBuddy</string>
    <string name="title">Travel Buddy</string>
    <string name="sub_title">Search local places with ease!</string>
    <string name="start">Start</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="explore_places">Explore Places</string>
    <string name="search_flights">Flights</string>
    <string name="favourites">Favourites</string>
    <string name="unknown">Unknown</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact us</string>

    <string name="content_desc_back_drop">BackDrop</string>
    <string name="content_desc_find_place_on_map">Click! to find place on map.</string>

    <string name="def_no_place_selected">No Place Selected</string>
    <string name="hint_auto_complete">Start typing to find a place</string>

    <string name="title_activity_places_category">Places Category Activity</string>
    <string name="title_activity_places_sub_type">Places Sub Type Activity</string>
    <string name="title_activity_flight_detail">Flight Details</string>

    <string name="call">CALL</string>
    <string name="website">WEBSITE</string>
    <string name="reviews">REVIEWS</string>
    <string name="save">SAVE</string>
    <string name="address">ADDRESS</string>
    <string name="photo">PHOTOS</string>
    <string name="time">TIME</string>
    <string name="title_activity_place_detail">Place Detail</string>
    <string name="title_activity_flight">FlightActivity</string>
    <string name="from_label">From</string>
    <string name="source_place_default">Chennai</string>
    <string name="to_label">To</string>
    <string name="destination_place_default">Delhi</string>
    <string name="search_btn_string">SEARCH</string>
    <string name="no_favourites_data">No Favourites</string>
    <string name="no_places_data_in_sub_type">No Places</string>
    <string name="network_error_try_again">Network Error!</string>
    <string name="retry_button_text">Try Again</string>
    <string name="favourite_places">Favourite Places</string>
    <string name="add_widget">Add widget</string>
    <string name="fav_fab_menu_label">Filter</string>
    <string name="fav_all_places_fab_label">All Places</string>
    <string name="fav_category_fab_label">Category</string>
    <string name="fav_sub_type_fab_label">Sub Type</string>
    <string name="hyphen_character">&#45;</string>
    <string name="ad_type">SMART_BANNER</string>

    <string name="contact_message">Travel Buddy App, developed by github@harinivaskumar.\n\n\nFor any queries, please write to me"</string>
    <string name="dev_email">"harinivaskumar@gmail.com"</string>

    <!-- Content Descriptions -->
    <string name="cd_nav_header_image">Travel Buddy App icon</string>
    <string name="image_for_place">Image for Place</string>
    <string name="place_detail_cover_image">Place Cover Image</string>
    <string name="place_detail_place_rating">Place Rating</string>
    <string name="place_detail_photo_slide">Showing Photo slide %1$d out of %2$d</string>
    <string name="place_detail_place_rating_with_value">Place Rating value of %1$f out of 5</string>
    <string name="place_detail_place_location_on_map">Showing, Place location in Google Map</string>
    <string name="cd_places_menu_fab">Menu Options</string>
    <string name="cd_place_detail_call_fab">Make a call to enquire about the Place</string>
    <string name="cd_place_detail_web_fab">Open the Place Website</string>
    <string name="cd_place_detail_fav_fab">Mark Place as Favourite</string>
    <string name="cd_place_detail_share_fab">Share with Others</string>
    <string name="cd_please_wait_content_loading">Please, wait while loading the content</string>
    <string name="cd_fav_all_places">Display all Favourite Places</string>
    <string name="cd_fav_category_filter">Display places by filtering places category</string>
    <string name="cd_fav_sub_type_filter">Display places by filtering places sub-type</string>
    <string name="cd_source_place_drop_down">Check to, Select the desired Flight Source Place</string>
    <string name="cd_destination_place_drop_down">Check to, Select the desired Flight Destination Place</string>

    <string name="places_api_key">GOOGLE_PLACES-API-KEY</string>
    <string name="ad_smart_banner_unit_id">GOOGLE_AD_SMART-UNIT_ID</string>
</resources>
