<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore_places"
            android:icon="@drawable/ic_menu_explore"
            android:title="@string/explore_places" />
        <item
            android:id="@+id/nav_search_flight"
            android:icon="@drawable/ic_menu_flight"
            android:title="@string/search_flights" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_menu_favourite"
            android:title="@string/favourites" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
