<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FlightSearchFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/source_label_id"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tool_bar"
        android:background="#dfdfdf"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/from_label"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/source_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/source_label_id">

        <TextView
            android:id="@+id/source_place_id"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/source_place_default"
            android:textColor="#000"
            android:textSize="23sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/cd_source_place_drop_down"
            android:src="@drawable/ic_down" />

    </RelativeLayout>

    <TextView
        android:id="@+id/destination_label_id"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/source_layout"
        android:background="#dfdfdf"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/to_label"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/destination_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/destination_label_id">

        <TextView
            android:id="@+id/destination_place_id"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/destination_place_default"
            android:textColor="#000"
            android:textSize="23sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/cd_destination_place_drop_down"
            android:src="@drawable/ic_down" />

    </RelativeLayout>

    <Button
        android:id="@+id/flight_search_btn_id"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/search_btn_string"
        android:textColor="#fff"
        android:textSize="18sp" />

</RelativeLayout>
