<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/content_desc_back_drop"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/title"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/title"
        android:textColor="#fff"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="145dp"
        android:text="@string/sub_title"
        android:textColor="#fff"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/goIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/go_in"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="italic"/>

    </LinearLayout>

</FrameLayout>