<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ExplorePlacesFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_explore_places"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <RelativeLayout
        android:id="@+id/explore_places_layout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/find_place_on_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:contentDescription="@string/content_desc_find_place_on_map"
            android:src="@android:drawable/ic_dialog_map"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/new_place_found_on_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="17dp"
            android:layout_toEndOf="@id/find_place_on_map"
            android:layout_toRightOf="@id/find_place_on_map"
            android:clickable="true"
            android:singleLine="true"
            android:text="@string/def_no_place_selected"
            android:textAppearance="@android:style/TextAppearance.Medium.Inverse"
            android:visibility="invisible" />

        <AutoCompleteTextView
            android:id="@+id/explore_place"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_auto_complete"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColorHint="#FFF"
            android:visibility="invisible" />
    </RelativeLayout>

    <ListView
        android:id="@+id/places"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>
